(library
 (name machine_stubs)
 (public_name miru.machine)
 (modes native)
 (no_dynlink)
 (foreign_archives miru_machine)
 (c_library_flags -lpthread -ldl))

;; when using dune outside the Nix sandbox, invoke cargo to build
;; the static object.

(rule
 (targets libmiru_machine.a)
 (enabled_if
  (= %{env:IS_NIX_BUILD_ENV=false} false))
 (deps
  (source_tree %{project_root}/miru-machine/src)
  %{project_root}/miru-machine/Cargo.toml)
 (action
  (run
   dune-cargo-build
   %{project_root}/miru-machine/Cargo.toml
   .
   --profile
   release
   --workspace-root
   %{workspace_root}
   --
   -p
   miru-machine)))

;; when using crane inside the Nix sandbox, use the static object
;; prepared by crane.

(rule
 (targets libmiru_machine.a)
 (enabled_if
  (= %{env:IS_NIX_BUILD_ENV=false} true))
 (action
  (copy
   %{env:CRANE_MIRU_MACHINE_DIR=/this/is/an/easter/egg}/lib/libmiru_machine.a
   libmiru_machine.a)))
