(library
 (name miru_rtl_bridge)
 (public_name miru.rtl)
 (modes native)
 (no_dynlink)
 (foreign_archives miru_rtl)
 (c_library_flags -lpthread -ldl))

(rule
 (targets libmiru_rtl.a)
 (enabled_if
  (= %{env:IS_NIX_BUILD_ENV=false} false))
 (deps
  (source_tree %{project_root}/miru-rtl/src)
  %{project_root}/miru-rtl/Cargo.toml)
 (action
  (run
   dune-cargo-build
   %{project_root}/miru-rtl/Cargo.toml
   .
   --profile
   release
   --workspace-root
   %{workspace_root}
   --
   -p
   miru-rtl)))

(rule
 (targets libmiru_rtl.a)
 (enabled_if
  (= %{env:IS_NIX_BUILD_ENV=false} true))
 (action
  (copy
   %{env:MIRU_RTL_DIR=unbothered_placeholder}/lib/libmiru_rtl.a
   libmiru_rtl.a)))
